# win32-error-output-stream-test

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml  cmake-windows.yml
